Removed unnecessary annotations and imports